syntax = "proto3";
package com.antigravity;

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "LapProto";

message Lap {
  string objectId = 1;
  float lap_time = 2;
  int32 lap_number = 3;
  float average_lap_time = 4;
  float median_lap_time = 5;
  float best_lap_time = 6;
}
